--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Will you be my Valentine, Roma?💖</h1>
+    <h1>Will you be my Valentine, Roma?♥️</h1>
     <button id="yes" onclick="alert('Yaaaay 💕 I knew it 😍')">Yes 💘</button>
     <button id="no">No 💔</button>
   </div>
@@ -80,3 +80,4 @@
 </script>
 </body>
 </html>
+
